feat: prepare core service for buoi 6 integration
